# frangiclave-mod-manager-legacy

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
ci/: before_deploy.sh  before_install.sh  install.sh
data/patch/: README.txt
src/: game.rs  main.rs  patch.rs  repo.rs
