[package]
name = "frangiclave-mod-manager"
version = "0.5.0"
authors = ["Lyrositor <gagne.marc@gmail.com>"]
publish = false

[dependencies]
clap = "2.32"
fs_extra = "1.1.0"
lazy_static = "1.1.0"
native-tls = { version = "0.2", features = ["vendored"] }
reqwest = "0.8.7"
regex = "1.0.2"
semver = "0.9.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
tempdir = "0.3"
zip = "0.4.2"
